fixes to dark mode

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -20,9 +20,10 @@ body.dark {
 		border: 1px solid #808080;
 	}
 	#moon {
-		font-size: 20px;
+        font-size: 20px;
+        color: $color_1
 	}
-	h1 {
+	h1 a {
 		color: $color_1;
 	}
 }
